--- a/bootstrap_theme/vivato/factory_blog_post.scss
+++ b/bootstrap_theme/vivato/factory_blog_post.scss
@@ -733,8 +733,17 @@
         border: none!important;
         border-radius: 0%;
         padding: 8px 0px;
+        transition: color $pd-transition-speed ease;
 
-    
+        &:hover {
+            color: $pd-primary-hover;
+
+        }
+
+        &:focus-visible {
+            outline: $pd-focus-outline-dark;
+            outline-offset: $pd-focus-outline-offset-sm;
+        }
     }
 
     .pd-gradient-full-width-800h {
@@ -772,6 +781,11 @@
             font-size: $pd-font-ex-sm;
             margin-bottom: 0px;
             text-decoration: none;
+
+            &:focus-visible {
+                outline: $pd-focus-outline-dark;
+                outline-offset: $pd-focus-outline-offset-sm;
+            }
         }
 
         .pd-blog-post-3-img-outer {
@@ -818,6 +832,12 @@
                         transform: scale(1.1);
                     }
                 }
+
+                &:focus-visible {
+                    outline: $pd-focus-outline-dark;
+                    outline-offset: $pd-focus-outline-offset-sm;
+                    border-radius: 50em;
+                }
             }
         }
     }
@@ -841,11 +861,10 @@
     }
 
     // .pd-blog-post-3-tag-icon-outer {
-    //     svg {
-    //         fill: $secondary;
-    //     }
+    // svg {
+    // fill: $secondary;
     // }
-
+    // }
     .pd-blog-post-3-tag-group {
         a {
             margin-bottom: 12px;
@@ -864,6 +883,11 @@
             &:hover {
                 background-color: $white;
                 color: $primary;
+            }
+
+            &:focus-visible {
+                outline: $pd-focus-outline-dark;
+                outline-offset: $pd-focus-outline-offset-sm;
             }
         }
     }
