Added in more focus and hover styles

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -54,6 +54,8 @@ $pd-btn-border-hover-inverted: 1px solid $info;
 $pd-line-height-lg: 1.4;
 $pd-line-height-ex-lg: 1.7;
 
+$pd-btn-info-border: 1px solid $info;
+
 // was 1.5
 $pd-line-height-ex-ex-lg: 2.2;
 $pd-transition-speed: 0.3s;
