--- a/bootstrap_theme/vivato/factory_heroes.scss
+++ b/bootstrap_theme/vivato/factory_heroes.scss
@@ -2763,6 +2763,12 @@
                     transform: scale(1.1);
                 }
             }
+
+            &:focus-visible {
+                outline: $pd-focus-outline-dark;
+                outline-offset: $pd-focus-outline-offset-sm;
+                border-radius: 50em;
+            }
         }
     }
 }
