--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -6,7 +6,7 @@ $black: #231F20;
 $light: #f8f9fa;
 $dark: #343a40;
 $white: #ffffff;
-$pd-primary-hover: #CCCCCC;
+$pd-primary-hover: $secondary;
 
 // outline light
 $pd-focus-outline: 2px dotted $primary;
@@ -53,7 +53,6 @@ $pd-btn-border-hover: 1px solid $info;
 $pd-btn-border-hover-inverted: 1px solid $info;
 $pd-line-height-lg: 1.4;
 $pd-line-height-ex-lg: 1.7;
-
 $pd-btn-info-border: 1px solid $info;
 
 // was 1.5
@@ -171,5 +170,23 @@ $font-family-sans-serif: 'DMSans', system-ui, -apple-system, sans-serif;
 @import "vivato/factory_mega_menu_nav";
 @import "hamburgers/hamburgers";
 
-// import the hamburgers
-/* Custom CSS rules come here */
+// .hamburger {
+    // .hamburger-inner,
+    // .hamburger-inner::before,
+    // .hamburger-inner::after {
+    //     transition: background-color $pd-transition-speed ease;
+    // }
+
+//     &:hover {
+//         .hamburger-inner,
+//         .hamburger-inner::before,
+//         .hamburger-inner::after {
+//             background-color: $secondary;
+//         }
+//     }
+
+//     &:focus-visible {
+//         outline: $pd-focus-outline;
+//         outline-offset: $pd-focus-outline-offset-sm;
+//     }
+// }
